...
                android:padding="10dp"
                android:id="@+id/container1"
                >
            <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/blog_title"
                    android:text="The Title of a Blog"
                    android:textColor="#000"
                    android:textSize="19sp"
                    />

            <TextView
...
