...
        android:id="@+id/app_bar"
        >

        <androidx.appcompat.widget.Toolbar
            android:layout_width="match_parent"
            android:layout_height="@dimen/toolbar_height"
            android:id="@+id/tool_bar"
            app:layout_scrollFlags="scroll|enterAlways"
            >

        </androidx.appcompat.widget.Toolbar>

    </com.google.android.material.appbar.AppBarLayout>
...
